--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Social Links</title>
+    <title>My Elegant Social Links</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
-        <h1>Follow Me on Social Media</h1>
+        <h1>Welcome to My Page</h1>
+        <p class="intro">Elegance is the only beauty that never fades. Follow me on social media to stay connected.</p>
         <div class="social-links">
             <a href="https://twitter.com/your_username" class="twitter">Twitter</a>
             <a href="https://www.instagram.com/your_username" class="instagram">Instagram</a>
