--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
         <h1>Welcome to My Page</h1>
         <p class="intro">Elegance is the only beauty that never fades. Follow me on social media to stay connected.</p>
         <div class="social-links">
-            <a href="https://twitter.com/your_username" class="twitter">Twitter</a>
             <a href="https://www.instagram.com/your_username" class="instagram">Instagram</a>
             <a href="https://www.tiktok.com/@your_username" class="tiktok">TikTok</a>
             <a href="https://www.youtube.com/channel/your_channel_id" class="youtube">YouTube</a>
+            <a href="https://twitter.com/your_username" class="Rakuten">Rakuten room</a>
         </div>
     </div>
 </body>
