--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
         <h1>Welcome to My Page</h1>
         <p class="intro">Elegance is the only beauty that never fades. Follow me on social media to stay connected.</p>
         <div class="social-links">
-            <a href="https://www.instagram.com/your_username" class="instagram">Instagram</a>
-            <a href="https://www.tiktok.com/@your_username" class="tiktok">TikTok</a>
-            <a href="https://www.youtube.com/channel/your_channel_id" class="youtube">YouTube</a>
-            <a href="https://twitter.com/your_username" class="Rakuten">Rakuten room</a>
+            <a href="https://www.instagram.com/___._mayu?igsh=MWFsOGVtOGl5ZG9ocg%3D%3D&utm_source=qr" class="instagram">Instagram</a>
+            <a href="https://www.tiktok.com/@mauchan___?_t=8qvJU6peLpg&_r=1" class="tiktok">TikTok</a>
+            <a href="https://youtube.com/@mau_pau?si=HJjVAvRP5amspWRr" class="youtube">YouTube</a>
+            <a href="https://room.rakuten.co.jp/room_a25c766510/items" class="Rakuten">Rakuten room</a>
         </div>
     </div>
 </body>
