--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <a href="https://www.instagram.com/___._mayu?igsh=MWFsOGVtOGl5ZG9ocg%3D%3D&utm_source=qr" class="instagram">Instagram</a>
             <a href="https://www.tiktok.com/@mauchan___?_t=8qvJU6peLpg&_r=1" class="tiktok">TikTok</a>
             <a href="https://youtube.com/@mau_pau?si=HJjVAvRP5amspWRr" class="youtube">YouTube</a>
-            <a href="https://room.rakuten.co.jp/room_a25c766510/items" class="Rakuten">Rakuten room</a>
+            <a href="https://room.rakuten.co.jp/room_a25c766510/items" class="rakuten">Rakuten room</a>
         </div>
     </div>
 </body>
