--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <h1>Welcome to My Page</h1>
-        <p class="intro">マイペースにファッションVLOGを載せています❤️</p>
+        <p class="intro">マイペースにファッションVLOGを載せています！</p>
         <div class="social-links">
             <a href="https://www.instagram.com/___._mayu?igsh=MWFsOGVtOGl5ZG9ocg%3D%3D&utm_source=qr" class="instagram">Instagram</a>
             <a href="https://www.tiktok.com/@mauchan___?_t=8qvJU6peLpg&_r=1" class="tiktok">TikTok</a>
